# kickstart-cln-plugin

./: .env  .env.example  .gitignore  Cargo.toml  README.md  cashu_wallet.db
docker-dev-env/: cln-config  docker-compose.yml
src/: cln_liquidity_plugin.rs  ecash_wallet.rs  lsp_channel_opener.rs  main.rs
