[package]
name = "kickstart-cln"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
cdk = "0.4.0"
cdk-redb = "0.4.0"
cdk-sqlite = "0.4.0"
cln-plugin = "0.2.0"
dotenvy = "0.15.7"
env_logger = "0.11.5"
hex = "0.4.3"
log = "0.4.22"
rand = "0.8.5"
tokio = { version = "1.40.0", features = ["full"] }

[profile.release]
lto = true
opt-level = 3
strip = true
codegen-units = 1
debug = false

# RUSTFLAGS="-C target-cpu=native"