[package]
name = "kickstart-cln"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
cdk = { git="https://github.com/cashubtc/cdk", branch="main" }
cdk-redb = { git="https://github.com/cashubtc/cdk", branch="main" }
cdk-sqlite = { git="https://github.com/cashubtc/cdk", branch="main" }
cln-plugin = "0.2"
dotenvy = "0.15"
env_logger = "0.11"
hex = "0.4"
log = "0.4"
rand = "0.8"
tokio = { version = "1.40", features = ["full"] }

[profile.release]
lto = true
opt-level = 3
strip = true
codegen-units = 1
debug = false

# for max performance:
# RUSTFLAGS="-C target-cpu=native"